fix: мелкие изменения